; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kvm/extr_svm.c_clgi_interception.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kvm/extr_svm.c_clgi_interception.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vcpu_svm = type { %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@V_IRQ_MASK = common dso_local global i32 0, align 4
@VMCB_INTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vcpu_svm*)* @clgi_interception to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clgi_interception(%struct.vcpu_svm* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vcpu_svm*, align 8
  %4 = alloca i32, align 4
  store %struct.vcpu_svm* %0, %struct.vcpu_svm** %3, align 8
  %5 = load %struct.vcpu_svm*, %struct.vcpu_svm** %3, align 8
  %6 = call i64 @nested_svm_check_permissions(%struct.vcpu_svm* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %38

9:                                                ; preds = %1
  %10 = load %struct.vcpu_svm*, %struct.vcpu_svm** %3, align 8
  %11 = getelementptr inbounds %struct.vcpu_svm, %struct.vcpu_svm* %10, i32 0, i32 1
  %12 = call i32 @kvm_skip_emulated_instruction(i32* %11)
  store i32 %12, i32* %4, align 4
  %13 = load %struct.vcpu_svm*, %struct.vcpu_svm** %3, align 8
  %14 = call i32 @disable_gif(%struct.vcpu_svm* %13)
  %15 = load %struct.vcpu_svm*, %struct.vcpu_svm** %3, align 8
  %16 = getelementptr inbounds %struct.vcpu_svm, %struct.vcpu_svm* %15, i32 0, i32 1
  %17 = call i32 @kvm_vcpu_apicv_active(i32* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %36, label %19

19:                                               ; preds = %9
  %20 = load %struct.vcpu_svm*, %struct.vcpu_svm** %3, align 8
  %21 = call i32 @svm_clear_vintr(%struct.vcpu_svm* %20)
  %22 = load i32, i32* @V_IRQ_MASK, align 4
  %23 = xor i32 %22, -1
  %24 = load %struct.vcpu_svm*, %struct.vcpu_svm** %3, align 8
  %25 = getelementptr inbounds %struct.vcpu_svm, %struct.vcpu_svm* %24, i32 0, i32 0
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = and i32 %29, %23
  store i32 %30, i32* %28, align 4
  %31 = load %struct.vcpu_svm*, %struct.vcpu_svm** %3, align 8
  %32 = getelementptr inbounds %struct.vcpu_svm, %struct.vcpu_svm* %31, i32 0, i32 0
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %32, align 8
  %34 = load i32, i32* @VMCB_INTR, align 4
  %35 = call i32 @mark_dirty(%struct.TYPE_4__* %33, i32 %34)
  br label %36

36:                                               ; preds = %19, %9
  %37 = load i32, i32* %4, align 4
  store i32 %37, i32* %2, align 4
  br label %38

38:                                               ; preds = %36, %8
  %39 = load i32, i32* %2, align 4
  ret i32 %39
}

declare dso_local i64 @nested_svm_check_permissions(%struct.vcpu_svm*) #1

declare dso_local i32 @kvm_skip_emulated_instruction(i32*) #1

declare dso_local i32 @disable_gif(%struct.vcpu_svm*) #1

declare dso_local i32 @kvm_vcpu_apicv_active(i32*) #1

declare dso_local i32 @svm_clear_vintr(%struct.vcpu_svm*) #1

declare dso_local i32 @mark_dirty(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
